--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -40,5 +40,5 @@ management:
   endpoints:
     web:
       exposure:
-        include: health,info
+        include: health,info,metrics,prometheus
 
