--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,6 +5,12 @@ spring:
     url: jdbc:postgresql://localhost:5432/library
     username: library
     password: library
+    hikari:
+      maximum-pool-size: 30
+      minimum-idle: 10
+      connection-timeout: 30000
+      idle-timeout: 600000
+      max-lifetime: 1800000
 
   flyway:
     enabled: true
@@ -14,8 +20,6 @@ spring:
     open-in-view: false
     hibernate:
       ddl-auto: validate
-
-
 
   web:
     resources:
